# aoc2022

./: .gitignore  README.md  aoc.py  pyproject.toml  template.py  utils.py
solutions/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day17.py  day20.py  day21.py  day25.py
