[tool.poetry]
name = "aoc_2022"
version = "0.1.0"
description = ""
authors = ["LoC <loc@locrealloc.de>"]

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.7.0"
requests = "^2.28.1"
pyperclip = "^1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
